--- a/plugin.yml
+++ b/plugin.yml
@@ -4,5 +4,5 @@ author: kapehh
 version: 1.0.0
 commands:
     spawnmobx:
-      usage: /<command> [ location <world> <x> <y> <z> / players <patternName> <radius> ] <count> <mob>
+      usage: /<command> [ location <world> <x> <y> <z> / players <world> <radius> ] <count> <mob>
       description:
